# plugin-seafile-quota-to-influxdb

./: README.md  check_seafile_quota.py  plugin_seafile_quota_to_influxdb.py  pyproject.toml  requirements.txt
src/: plugin_seafile_quota_to_influxdb.py
