[tool.poetry]
name = "plugin-seafile-quota-to-influxdb"
version = "1.0"
description = "This standalone plugin creates metrics from Seafile libraries quotas and stores them in InfluxDB"
authors = ["Your Name <you@example.com>"]
license = "Apache License Version 2"
readme = "README.md"
packages = [{include = "plugin_seafile_quota_to_influxdb"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2023.5.7"
influxdb-client = "^1.36.1"
requests = "^2.31.0"
psutil = "^5.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
